ajout commentaire tenue

--- a/server.cfg
+++ b/server.cfg
@@ -50,7 +50,7 @@ start new_banking				# Script de banque remplaçant esx_atm
 
 start batman
 start BatmanBVS
-start Cyborg
+start Cyborg #costume
 start CyborgElite
 start UnbreakableCyborgElite
 start UnbreakableCyborgUpdated
