--- a/server.cfg
+++ b/server.cfg
@@ -272,14 +272,23 @@ start czl1						 #Chevrolet camaro ZL1
 start ipace						 #Jaguar Ipace
 start msohs						 #Mc laren MSO
 start mvisiongt
+start Contgt13
+start Phantom
 
+
+####################HEROES#################################
 
 start batpod
 start batwing
 start snyder
 
+####################POLICE#####################################
+
 start polchiron
 start polp1
+start policegt350r
+start ghispo2
+start 2015POLSTANG
 
 ################################ Nombre de joueurs
 
