--- a/server.cfg
+++ b/server.cfg
@@ -273,7 +273,7 @@ start ipace						 #Jaguar Ipace
 start msohs						 #Mc laren MSO
 start mvisiongt
 start Contgt13
-start Phantom
+start rrphantom
 
 
 ####################HEROES#################################
