add some skins to the server

--- a/server.cfg
+++ b/server.cfg
@@ -7,8 +7,10 @@
 
 ###################### ip + port
 
-endpoint_add_tcp "51.75.22.143:30120"
-endpoint_add_udp "51.75.22.143:30120"
+endpoint_add_tcp "127.0.0.1:30120"
+endpoint_add_udp "127.0.0.1:30120"
+#endpoint_add_tcp "51.75.22.143:30120"
+#endpoint_add_udp "51.75.22.143:30120"
 
 ###################### Set connection MYSQL-async
 
@@ -212,7 +214,11 @@ start PaulSerene
 start bane
 start redhoodi2
 start batman
-
+start BatmanBVS
+start Cyborg #costume
+start CyborgElite
+start UnbreakableCyborgElite
+start UnbreakableCyborgUpdated
 
 
 ################################ props
@@ -348,7 +354,8 @@ add_principal identifier.steam:1100001349f2f84 group.admin # add the admin to th
 ################################ licence fivem 
 
 # license key for server (https://keymaster.fivem.net)
-set sv_licenseKey 5f2mhvoj39b4qlc4sj2n5gh7n096p3nf 
+#set sv_licenseKey 5f2mhvoj39b4qlc4sj2n5gh7n096p3nf 
+set sv_licenseKey mf7ghe166l6fk9p0jf6movdljkqzgzfr
 
 ################################
 
