add scarecrow + tenu par role cartel

--- a/server.cfg
+++ b/server.cfg
@@ -210,7 +210,7 @@ start JokerBAO
 start deathstroke
 start deadshotSS
 start blademasterrobin
-start PaulSerene
+#start PaulSerene
 start bane
 start redhoodi2
 start batman
@@ -219,6 +219,7 @@ start Cyborg #costume
 start CyborgElite
 start UnbreakableCyborgElite
 start UnbreakableCyborgUpdated
+start scarecrow
 
 
 ################################ props
@@ -233,7 +234,7 @@ start clio                      # clio
 start polo2018                  # WV Polo
 start pturismo                  # Porche Turismo
 start rmodbmwi8                 # BMW I8
-#start 1989                      # Batmobil 1989
+start 1989                      # Batmobil 1989
 start lp700                     # Lamborgini 
 start 16challenger               # voiture add-on customable dll sur fivem
 start rmodmustang                # voiture add-on customable
