Maj Cartel + Maj Police

--- a/server.cfg
+++ b/server.cfg
@@ -220,7 +220,7 @@ start CyborgElite
 start UnbreakableCyborgElite
 start UnbreakableCyborgUpdated
 start scarecrow
-
+start Joker
 
 ################################ props
 
