--- a/server.cfg
+++ b/server.cfg
@@ -313,7 +313,7 @@ rcon_password CaroLine
 
 ################################ Nom du server 
 
-sv_hostname "[FR-QC-BE] 🦇 Gotham City RP By Digilux 🦇  | ✅ RP Serieux ✅ | Free Access | 🎮 Manette et Clavier 🎮 | Economie Realiste | 🚗 Véhicules Add on  🚗 | 🤵 Mafia & Drogues + (lsd,Trafic D'Organe) 💊 |  |  💼 Jobs & Entrprises Metier Unique  | Wayne Tech  | Suicide Squad   💼 | 🙏🏼 Staff Actifs & Réceptif 🙏🏼|https://discord.gg/ntM8CsF" 
+sv_hostname "[FR-QC-BE] 🦇 Gotham City RP By Digilux 🦇  | ✅ RP Serieux ✅ | Free Access | 🎮 Manette et Clavier 🎮 | Economie Realiste | 🚗 Véhicules Add on  🚗 | 🤵 Mafia & Drogues + (lsd,Trafic D'Organe) 💊 |  |  💼 Jobs & Entrprises Metier Unique  | Wayne Tech  | Suicide Squad   💼 | 🙏🏼 Staff Actifs & Réceptif 🙏🏼|https://discord.gg/R76Kge" 
 
 ################################
 
