menu adon desactivé

--- a/server.cfg
+++ b/server.cfg
@@ -174,7 +174,7 @@ start esx_armor
 start boostvoiture
 #start EasyAdmin
 start mellotrainer
-start AddOnPedSpawnMenu
+#start AddOnPedSpawnMenu
 start Speedometer
 
 
