add alerte fib gouvernor + modif phone operator name

--- a/resources/[Phone]/gcphone/html/static/config/config.json
+++ b/resources/[Phone]/gcphone/html/static/config/config.json
@@ -1,10 +1,10 @@
 {
 
-  "reseau": "Five Inside",
+  "reseau": "Wayne Mobile",
 
   
 
-  "themeColor": "#303f9f",
+  "themeColor": "000d1a",
 
   "colors": [
 
