Ceinture de secu

--- a/server.cfg
+++ b/server.cfg
@@ -149,6 +149,8 @@ start esx_lsd                    # LSD
 #start esx_tabacjob-master
 start knockout                   # Script K.O
 #start RealisticVehicleFailure-master # Script dégat vehicule
+start ceinturesecurite
+
 
 
  
