Revert "add alerte fib gouvernor + modif phone operator name"
This reverts commit f9d0c3b551fddc9135bcc7532711e7dc196baff0.

--- a/resources/[Phone]/gcphone/html/static/config/config.json
+++ b/resources/[Phone]/gcphone/html/static/config/config.json
@@ -1,10 +1,10 @@
 {
 
-  "reseau": "Wayne Mobile",
+  "reseau": "Five Inside",
 
   
 
-  "themeColor": "000d1a",
+  "themeColor": "#303f9f",
 
   "colors": [
 
