tornade pour test (suppression après test) + alerte fib gouvernor
les droits de la tornade ne sont que pour john lucius et joker

--- a/server.cfg
+++ b/server.cfg
@@ -152,7 +152,6 @@ start knockout                   # Script K.O
 start ceinturesecurite
 
 
-
  
 ###################### Coffre conteneur et autres 
 
@@ -202,6 +201,7 @@ start tp_joker
 start batcave
 
 start BatmanAK
+start gd_tornado
 
 ################################ peds
 
@@ -279,7 +279,6 @@ start mvisiongt
 start Contgt13
 start rrphantom
 
-
 ####################HEROES#################################
 
 start batpod
@@ -342,7 +341,9 @@ set temp_convar "hey world!"
 # add system admins
 add_ace group.admin command allow # allow all commands
 add_ace group.admin command.quit deny # but dont allow quit
-add_principal identifier.steam:1100001349f2f84 group.admin # add the admin to the group
+add_principal identifier.steam:1100001075e32e8 group.admin # add the admin to the group Lucius Fox
+add_principal identifier.steam:1100001349f2f84 group.admin # add the admin to the group John Doe
+add_principal identifier.steam:11000010adb7315 group.admin # add the admin to the group Joker
 
 ################################ rendre priver 
 
