--- a/server.cfg
+++ b/server.cfg
@@ -150,6 +150,7 @@ start esx_lsd                    # LSD
 start knockout                   # Script K.O
 #start RealisticVehicleFailure-master # Script dégat vehicule
 start ceinturesecurite
+start LockSystem
 
 
 
