Ajout fonction discord pour le serveur + supp de l'ancien

--- a/server.cfg
+++ b/server.cfg
@@ -142,7 +142,8 @@ start esx_bahamajob
 start esx_outlawalert
 start esx_blanchisseur          # Blanchiment d'argent
 start esx_bikerjob              # biker
-start esx_advanced_discord_bot
+#start esx_advanced_discord_bot
+start esx_discord_bot
 #start esx_armurierjob           # Armurier
 start esx_organ                  # Trafic D'Organe
 start esx_lsd                    # LSD
