--- a/server.cfg
+++ b/server.cfg
@@ -7,8 +7,7 @@
 
 ###################### ip + port
 
-#endpoint_add_tcp "127.0.0.1:30120"
-#endpoint_add_udp "127.0.0.1:30120"
+
 endpoint_add_tcp "51.75.22.143:30120"
 endpoint_add_udp "51.75.22.143:30120"
 
@@ -142,8 +141,7 @@ start esx_bahamajob
 start esx_outlawalert
 start esx_blanchisseur          # Blanchiment d'argent
 start esx_bikerjob              # biker
-#start esx_advanced_discord_bot
-start esx_discord_bot
+start esx_advanced_discord_bot
 #start esx_armurierjob           # Armurier
 start esx_organ                  # Trafic D'Organe
 start esx_lsd                    # LSD
@@ -166,7 +164,7 @@ start iplLoader					# Chargement des IPL's
 start deleteveh					# Permet de supprimer un véhicule
 start disabledispatch			# Empêche les PNJ's EMS et Pompiers d'intervenir
 start InteractSound				# Permet de jouer le son d'ouverture/fermeture des véhicules
-start jb_vehiclelock			# Permet d'ouvrir/fermer les véhicules
+#start jb_vehiclelock			# Permet d'ouvrir/fermer les véhicules
 #start SexySpeedometer			# Compteur de vitesse/de tour/ et d'essence.
 start VehiculeHealt				# Donne une santé à votre véhicule, après un certain quota de dégats, vous devez appelez un dépanneur.
 start NoWeaponReward			# Les véhicules de police ne donnent plus d'armes quand vous monter dedans.  
@@ -203,7 +201,9 @@ start tp_joker
 start batcave
 start whitehouse
 
+
 start BatmanAK
+
 
 ################################ peds
 
@@ -220,6 +220,7 @@ start redhoodi2
 start batman
 start scarecrow
 start Joker
+
 
 ################################ props
 
@@ -307,7 +308,7 @@ sv_scriptHookAllowed 0
 ################################ Mot de passe
 
 # change this
-rcon_password CaroLine
+rcon_password 8246
 
 ################################ Nom du server 
 
