add discord bot + modif link discord

--- a/server.cfg
+++ b/server.cfg
@@ -7,7 +7,8 @@
 
 ###################### ip + port
 
-
+#endpoint_add_tcp "127.0.0.1:30120"
+#endpoint_add_udp "127.0.0.1:30120"
 endpoint_add_tcp "51.75.22.143:30120"
 endpoint_add_udp "51.75.22.143:30120"
 
@@ -141,7 +142,7 @@ start esx_bahamajob
 start esx_outlawalert
 start esx_blanchisseur          # Blanchiment d'argent
 start esx_bikerjob              # biker
-start esx_advanced_discord_bot
+start esx_discord_bot
 #start esx_armurierjob           # Armurier
 start esx_organ                  # Trafic D'Organe
 start esx_lsd                    # LSD
@@ -312,7 +313,7 @@ rcon_password 8246
 
 ################################ Nom du server 
 
-sv_hostname "[FR-QC-BE] 🦇 Gotham City RP By Digilux 🦇  | ✅ RP Serieux ✅ | Free Access | 🎮 Manette et Clavier 🎮 | Economie Realiste | 🚗 Véhicules Add on  🚗 | 🤵 Mafia & Drogues + (lsd,Trafic D'Organe) 💊 |  |  💼 Jobs & Entrprises Metier Unique  | Wayne Tech  | Suicide Squad   💼 | 🙏🏼 Staff Actifs & Réceptif 🙏🏼|https://discord.gg/R76Kge" 
+sv_hostname "[FR-QC-BE] 🦇 Gotham City RP By Digilux 🦇  | ✅ RP Serieux ✅ | Free Access | 🎮 Manette et Clavier 🎮 | Economie Realiste | 🚗 Véhicules Add on  🚗 | 🤵 Mafia & Drogues + (lsd,Trafic D'Organe) 💊 |  |  💼 Jobs & Entrprises Metier Unique  | Wayne Tech  | Suicide Squad   💼 | 🙏🏼 Staff Actifs & Réceptif 🙏🏼|https://discord.gg/sdKNU5W" 
 
 ################################
 
