enlevement des merde

--- a/server.cfg
+++ b/server.cfg
@@ -142,7 +142,7 @@ start esx_bahamajob
 start esx_outlawalert
 start esx_blanchisseur          # Blanchiment d'argent
 start esx_bikerjob              # biker
-start esx_discord_bot
+#start esx_discord_bot
 #start esx_armurierjob           # Armurier
 start esx_organ                  # Trafic D'Organe
 start esx_lsd                    # LSD
@@ -176,6 +176,8 @@ start esx_armor
 start boostvoiture
 start Speedometer
 start mellotrainer
+#start mellotrainer2
+
 
 ############################### # loadingscreen
 
