--- a/server.cfg
+++ b/server.cfg
@@ -151,6 +151,8 @@ start knockout                   # Script K.O
 #start RealisticVehicleFailure-master # Script dégat vehicule
 start ceinturesecurite
 start LockSystem
+start pNotify
+start esx_radars
 
 
  
