--- a/server.cfg
+++ b/server.cfg
@@ -185,7 +185,7 @@ start mellotrainer
 
 start rabtor_simple_loadingscreen	# page d accueil
 
-################################ maps
+######################### MAPS #####################################
 
 start teleport
 start mapping
@@ -203,10 +203,7 @@ start tp_joker
 start batcave
 start whitehouse
 
-
-
-
-####################SKINS EMBLEMATIQUE###############################  
+#################### SKINS EMBLEMATIQUE ###############################  
 
 start nightwing
 start ig_bankman
@@ -215,15 +212,15 @@ start JokerBAO
 start deathstroke
 start deadshotSS
 start blademasterrobin
-#start PaulSerene
 start bane
 start redhoodi2
 start batman
 start scarecrow
 start Joker
 start BatmanAK
+start arkhamknight
 
-####################SKINS POLICE###############################
+#################### SKINS POLICE ###############################
 
 start s_m_m_chemsec_01
 start s_m_m_ciasec_01
@@ -234,7 +231,7 @@ start s_m_y_swat_02
 
 ################################ props
 
-################################ Vehicules moddé
+########################## VEHICULE MODEE ################################ 
 
 start burrito2                  # Burrito 2 logo DIGILUX fait maison 
 start rocoto                    # Volkswagen Tiguan 2013
@@ -292,13 +289,13 @@ start mvisiongt
 start Contgt13
 start rrphantom
 
-####################HEROES#################################
+#################### HEROES #################################
 
 start batpod
 start batwing
 start snyder
 
-####################POLICE#####################################
+#################### POLICE #####################################
 
 start polchiron
 start polp1
@@ -306,12 +303,12 @@ start policegt350r
 start ghispo2
 start 2015POLSTANG
 
-####################POLICE REPLACE#####################################
+#################### POLICE REPLACE #####################################
 
 start replacepolice
 
 
-####################STAFF#####################################
+#################### STAFF #####################################
 
 start royale       #Joker     
 start arrow        #Fonda
@@ -333,7 +330,7 @@ rcon_password 8246
 
 ################################ Nom du server 
 
-sv_hostname "[FR-QC-BE] 🦇 Gotham City RP By Digilux 🦇  | ✅ RP Serieux ✅ | Free Access | 🎮 Manette et Clavier 🎮 | Economie Realiste | 🚗 Véhicules Add on  🚗 | 🤵 Mafia & Drogues + (lsd,Trafic D'Organe) 💊 |  |  💼 Jobs & Entrprises Metier Unique  | Wayne Tech  | Suicide Squad   💼 | 🙏🏼 Staff Actifs & Réceptif 🙏🏼|https://discord.gg/sdKNU5W" 
+sv_hostname "[FR-QC-BE] 🦇 Gotham City RP By Digilux 🦇  | ✅ RP Serieux Original ✅ | Free Access | 🎮 Manette et Clavier 🎮 | Economie Realiste | 🚗 Véhicules Add on  🚗 | 🤵 Mafia & Drogues + (lsd,Trafic D'Organe,Toxine) 💊 |  |  💼 Jobs & Entrprises Metier Unique  | Wayne Tech,Suicide Squad,Informaticien,Chocolatier | 💼 | 🙏🏼 Staff Actifs & Réceptif 🙏🏼|https://discord.gg/VYp4wJ" 
 
 ################################
 
