--- a/server.cfg
+++ b/server.cfg
@@ -330,7 +330,7 @@ rcon_password 8246
 
 ################################ Nom du server 
 
-sv_hostname "[FR-QC-BE] 🦇 Gotham City RP By Digilux 🦇  | ✅ RP Serieux Original ✅ | Free Access | 🎮 Manette et Clavier 🎮 | Economie Realiste | 🚗 Véhicules Add on  🚗 | 🤵 Mafia & Drogues + (lsd,Trafic D'Organe,Toxine) 💊 |  |  💼 Jobs & Entrprises Metier Unique  | Wayne Tech,Suicide Squad,Informaticien,Chocolatier | 💼 | 🙏🏼 Staff Actifs & Réceptif 🙏🏼|https://discord.gg/VYp4wJ" 
+sv_hostname "[FR-QC-BE] 🦇 Gotham City RP By Digilux 🦇  | ✅ RP Serieux Original ✅ | Free Access | 🎮 Manette et Clavier 🎮 | Economie Realiste | 🚗 Véhicules Add on  🚗 | 🤵 Mafia & Drogues + (lsd,Trafic D'Organe,Toxine) 💊 |  |  💼 Jobs & Entrprises Metier Unique  | Wayne Tech,Suicide Squad,Informaticien,Chocolatier | 💼 | 🙏🏼 Staff Actifs & Réceptif 🙏🏼|https://discord.gg/sdKNU5W" 
 
 ################################
 
