Gouv + Voiture Modo

--- a/server.cfg
+++ b/server.cfg
@@ -297,15 +297,15 @@ start snyder
 
 #################### POLICE #####################################
 
-start polchiron
-start polp1
-start policegt350r
-start ghispo2
-start 2015POLSTANG
+#start polchiron
+#start polp1
+#start policegt350r
+#start ghispo2
+#start 2015POLSTANG
 
 #################### POLICE REPLACE #####################################
 
-start replacepolice
+#start replacepolice
 
 #################### ARME REPLACE #####################################
 
@@ -315,7 +315,8 @@ start weaponreplace
 
 start royale       #Joker     
 start arrow        #Fonda
-start trezor1      #Fonda    
+start trezor1      #Fonda 
+start rs6          #Modo   
 
 ################################ Nombre de joueurs
 
