Retirer F1 à batman(si ok) + MAJ PoliceJob(voiture) + add véhicule dev + MAJ arme FIB (batarang,...)

--- a/server.cfg
+++ b/server.cfg
@@ -317,6 +317,7 @@ start royale       #Joker
 start arrow        #Fonda
 start trezor1      #Fonda 
 start rs6          #Modo   
+start hondacivictr #Dev
 
 ################################ Nombre de joueurs
 
