modif gagn gouv car

--- a/server.cfg
+++ b/server.cfg
@@ -219,6 +219,7 @@ start scarecrow
 start Joker
 start BatmanAK
 start arkhamknight
+start CWArrowS4
 
 #################### SKINS POLICE ###############################
 
@@ -315,8 +316,7 @@ start weaponreplace
 
 start royale       #Joker     
 start arrow        #Fonda
-start trezor1      #Fonda 
-start rs6          #Modo   
+start trezor1      #Fonda   
 start hondacivictr #Dev
 
 ################################ Nombre de joueurs
