reactivé voiture police

--- a/server.cfg
+++ b/server.cfg
@@ -298,11 +298,11 @@ start snyder
 
 #################### POLICE #####################################
 
-#start polchiron
-#start polp1
-#start policegt350r
-#start ghispo2
-#start 2015POLSTANG
+start polchiron
+start polp1
+start policegt350r
+start ghispo2
+start 2015POLSTANG
 
 #################### POLICE REPLACE #####################################
 
