voitur staff modo

--- a/server.cfg
+++ b/server.cfg
@@ -318,6 +318,7 @@ start royale       #Joker
 start arrow        #Fonda
 start trezor1      #Fonda   
 start hondacivictr #Dev
+start gt17         #Modo         
 
 ################################ Nombre de joueurs
 
