--- a/server.cfg
+++ b/server.cfg
@@ -179,7 +179,7 @@ start boostvoiture
 start Speedometer
 start mellotrainer
 #start mellotrainer2
-
+start realtime
 
 ############################### # loadingscreen
 
@@ -202,6 +202,7 @@ start tp_suicidesquad
 start tp_joker
 start batcave
 start whitehouse
+start tp_waynetech
 
 #################### SKINS EMBLEMATIQUE ###############################  
 
@@ -242,7 +243,6 @@ start clio                      # clio
 start polo2018                  # WV Polo
 start pturismo                  # Porche Turismo
 start rmodbmwi8                 # BMW I8
-start 1989                      # Batmobil 1989
 start lp700                     # Lamborgini 
 start 16challenger               # voiture add-on customable dll sur fivem
 start rmodmustang                # voiture add-on customable
@@ -292,6 +292,7 @@ start rrphantom
 
 #################### HEROES #################################
 
+start 1989                      # Batmobil 1989
 start batpod
 start batwing
 start snyder
@@ -318,7 +319,7 @@ start royale       #Joker
 start arrow        #Fonda
 start trezor1      #Fonda   
 start hondacivictr #Dev
-start gt17         #Modo         
+start gt17 #Dev
 
 ################################ Nombre de joueurs
 
@@ -336,7 +337,7 @@ rcon_password 8246
 
 ################################ Nom du server 
 
-sv_hostname "[FR-QC-BE] 🦇 Gotham City RP By Digilux 🦇  | ✅ RP Serieux Original ✅ | Free Access | 🎮 Manette et Clavier 🎮 | Economie Realiste | 🚗 Véhicules Add on  🚗 | 🤵 Mafia & Drogues + (lsd,Trafic D'Organe,Toxine) 💊 |  |  💼 Jobs & Entrprises Metier Unique  | Wayne Tech,Suicide Squad,Informaticien,Chocolatier | 💼 | 🙏🏼 Staff Actifs & Réceptif 🙏🏼|https://discord.gg/sdKNU5W" 
+sv_hostname "[FR-QC-BE] 🦇 Gotham City RP By Digilux 🦇 | ✅ RP Serieux Original ✅ | Free Access | 🎮 Manette et Clavier 🎮 | Economie Realiste | 🚗 Véhicules Add on 🚗 | 🤵 Mafia & Drogues + (lsd,Trafic D'Organe,Toxine) 💊 | 💼 Jobs & Entreprises Metier Unique | Wayne Tech,Suicide Squad,Informaticien,Chocolatier | 💼 | 🙏🏼 Staff Actifs & Réceptif 🙏🏼|https://discord.gg/sdKNU5W" 
 
 ################################
 
