Vehicule tmax bm

--- a/server.cfg
+++ b/server.cfg
@@ -289,6 +289,8 @@ start msohs						 #Mc laren MSO
 start mvisiongt
 start Contgt13
 start rrphantom
+start x6m
+start tmax
 
 #################### HEROES #################################
 
