ajout waynetower + icerberg lounge + prop batlocker + doomsday

--- a/server.cfg
+++ b/server.cfg
@@ -185,6 +185,11 @@ start realtime
 
 start rabtor_simple_loadingscreen	# page d accueil
 
+################################ props
+
+start customprops
+start waynetowerprops
+
 ######################### MAPS #####################################
 
 start teleport
@@ -221,6 +226,7 @@ start Joker
 start BatmanAK
 start arkhamknight
 start CWArrowS4
+start INJUSTICEDOOMS
 
 #################### SKINS POLICE ###############################
 
@@ -229,9 +235,6 @@ start s_m_m_ciasec_01
 start s_m_y_cop_01
 start s_m_y_swat_01
 start s_m_y_swat_02
-
-
-################################ props
 
 ########################## VEHICULE MODEE ################################ 
 
