--- a/server.cfg
+++ b/server.cfg
@@ -295,6 +295,8 @@ start Contgt13
 start rrphantom
 start x6m
 start tmax
+start harley
+start zjok
 
 #################### HEROES #################################
 
