renam znok srarus faim soif

--- a/server.cfg
+++ b/server.cfg
@@ -296,7 +296,7 @@ start rrphantom
 start x6m
 start tmax
 start harley
-start zjok
+start zentenario
 
 #################### HEROES #################################
 
