--- a/server.cfg
+++ b/server.cfg
@@ -320,6 +320,7 @@ start 2015POLSTANG
 #################### ARME REPLACE #####################################
 
 start weaponreplace
+start skinarme
 
 #################### STAFF #####################################
 
