--- a/server.cfg
+++ b/server.cfg
@@ -191,7 +191,7 @@ start boostvoiture
 start Speedometer
 start mellotrainer
 #start mellotrainer2
-start realtime
+#start realtime
 
 ############################### # loadingscreen
 
