--- a/server.cfg
+++ b/server.cfg
@@ -239,6 +239,11 @@ start BatmanAK
 start arkhamknight
 start CWArrowS4
 start INJUSTICEDOOMS
+start FlashJL
+start spn52
+
+
+start heroes
 
 #################### SKINS POLICE ###############################
 
