--- a/server.cfg
+++ b/server.cfg
@@ -242,11 +242,11 @@ start CWArrowS4
 
 #################### SKINS POLICE ###############################
 
-start s_m_m_chemsec_01
-start s_m_m_ciasec_01
-start s_m_y_cop_01
-start s_m_y_swat_01
-start s_m_y_swat_02
+#start s_m_m_chemsec_01
+#start s_m_m_ciasec_01
+#start s_m_y_cop_01
+#start s_m_y_swat_01
+#start s_m_y_swat_02
 
 ########################## VEHICULE MODEE ################################ 
 
@@ -339,7 +339,7 @@ start royale       #Joker
 start arrow        #Fonda
 start trezor1      #Fonda   
 start hondacivictr #Dev
-start gt17 #Dev
+start gt17 #Modo
 
 ################################ Nombre de joueurs
 
