mode screen + jauge a essence

--- a/server.cfg
+++ b/server.cfg
@@ -188,7 +188,7 @@ start boostvoiture
 start Speedometer
 start mellotrainer
 #start realtime
-
+start cinematique-master
 ############################### # loadingscreen
 
 start rabtor_simple_loadingscreen	# page d accueil
