--- a/server.cfg
+++ b/server.cfg
@@ -146,7 +146,9 @@ start esx_bikerjob              # biker
 #start esx_armurierjob           # Armurier
 start esx_organ                  # Trafic D'Organe
 start esx_lsd                    # LSD
+#start esx_tabacjob-master
 start knockout                   # Script K.O
+#start RealisticVehicleFailure-master # Script dégat vehicule
 start ceinturesecurite
 start LockSystem
 start pNotify
@@ -160,6 +162,7 @@ start cameras_comico
 start cameras_entrainement
 start cameras_paleto
 start cameras_sandy
+start esx_centraldispatch
 start esx_computer
 start esx_dashcam
 start esx_detector
@@ -187,6 +190,7 @@ start esx_armor
 start boostvoiture
 start Speedometer
 start mellotrainer
+#start mellotrainer2
 #start realtime
 start cinematique-master
 ############################### # loadingscreen
@@ -195,8 +199,8 @@ start rabtor_simple_loadingscreen	# page d accueil
 
 ################################ props
 
-#start customprops
-#start waynetowerprops
+start customprops
+start waynetowerprops
 
 ######################### MAPS #####################################
 
@@ -234,11 +238,12 @@ start Joker
 start BatmanAK
 start arkhamknight
 start CWArrowS4
-#start FlashJL
-#start spn52
-#start INJ_ReverseFlash
+start INJUSTICEDOOMS
+start FlashJL
+start spn52
+start INJ_ReverseFlash
 
-#start heroes
+start heroes
 
 #################### SKINS POLICE ###############################
 
