Revert "suppression skin"
This reverts commit 808a05e63c8ff9367f8446dffbd5a07e8e8b3a1b.

--- a/server.cfg
+++ b/server.cfg
@@ -234,6 +234,10 @@ start bane
 start redhoodi2
 start batman
 start BatmanBVS
+start Cyborg #costume
+start CyborgElite
+start UnbreakableCyborgElite
+start UnbreakableCyborgUpdated
 start scarecrow
 start Joker
 start BatmanAK
